<resources>
    <string name="app_name">CoverZone</string>
    <!-- TODO: Remove when layouts are built , Partially used strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="et_detector_width">Detector Width</string>
    <string name="et_detector_height">Detector Height</string>
    <string name="et_detector_pitch">Detector Pitch</string>
    <string name="et_focal_length">Focal Length</string>
    <string name="et_offset">Offset</string>


    <!--Main fragment strings -->
    <string name="cardTitleSingle">Single Camera Coverage</string>
    <string name="cardContentSingle">Coverage done via a single camera</string>
    <string name="cardTitleMultiple">Multiple Cameras Coverage</string>
    <string name="cardContentMultiple">Coverage done via multiple cameras</string>
    <string name="mainFragmentIntro">What would you like to cover today? </string>

    <!--Add Camera Fragment strings -->
    <string name="cameraName">Name</string>
    <string name="detectorWidth">Detector Width</string>
    <string name="detectorHeight">Detector Height</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="detectorPitch">Detector Pitch</string>
    <string name="focalLength">Focal Length</string>
    <string name="cameraHeight">Camera Height</string>
    <string name="offset">Offset</string>
    <string name="x">x</string>
    <string name="addCameraTitle">Add Camera</string>
    <string name="addCamerabtn">Add</string>
    <string name="cancelBtnAddition">Cancel</string>

    <!--Single Coverage Fragment strings -->
    <string name="plusSign">+</string>
    <string name="searchCamera">Search Camera</string>
    <string name="selectCamera">Select a camera</string>
    <!--Recycler view view holder strings -->
    <string name="detectorSize">Detector Size</string>

    <!--View Coverage Fragment strings -->
    <string name="topTab">Top</string>
    <string name="sideTab">Side</string>
</resources>