<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
  <data>

        <variable
            name="addCameraViewModel"
            type="com.denniszabolotny.coverzone.viewmodel.AddCameraViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddCamera">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/cameraName"
        android:nextFocusDown="@id/textInputDetectorHeight"
        android:textColorHint="@color/darkBlueAcceptBtn"
        app:boxStrokeColor="@color/darkBlueAcceptBtn"
        app:hintTextColor="@color/darkBlueAcceptBtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="text"
            android:text="@={addCameraViewModel.cameraName}"
            android:textSize="@dimen/textSizeInputSmall" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDetectorHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/detectorHeight"
        android:nextFocusLeft="@id/textInputDetectorWidth"
        android:nextFocusRight="@id/textInputDetectorWidth"
        android:nextFocusUp="@id/textInputDetectorWidth"
        android:nextFocusDown="@id/textInputDetectorWidth"
        android:nextFocusForward="@id/textInputDetectorWidth"
        android:textColorHint="@color/darkBlueAcceptBtn"
        app:boxStrokeColor="@color/darkBlueAcceptBtn"
        app:hintTextColor="@color/darkBlueAcceptBtn"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textInputName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusLeft="@id/textInputDetectorWidth"
            android:nextFocusRight="@id/textInputDetectorWidth"
            android:nextFocusUp="@id/textInputDetectorWidth"
            android:nextFocusDown="@id/textInputDetectorWidth"
            android:nextFocusForward="@id/textInputDetectorWidth"
            android:text="@={addCameraViewModel.detectorHeight}"
            android:textSize="@dimen/textSizeInputExtraSmall" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/x"
        app:layout_constraintBottom_toBottomOf="@+id/textInputDetectorWidth"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/textInputDetectorWidth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textInputDetectorHeight"
        app:layout_constraintTop_toTopOf="@+id/textInputDetectorWidth"
        app:layout_constraintVertical_bias="0.8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDetectorWidth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/detectorWidth"

        android:nextFocusLeft="@id/textInputDetectorPitch"
        android:nextFocusRight="@id/textInputDetectorPitch"
        android:nextFocusUp="@id/textInputDetectorPitch"
        android:nextFocusDown="@id/textInputDetectorPitch"
        android:nextFocusForward="@id/textInputDetectorPitch"
        android:textColorHint="@color/darkBlueAcceptBtn"
        app:boxStrokeColor="@color/darkBlueAcceptBtn"
        app:hintTextColor="@color/darkBlueAcceptBtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textInputName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="number"
            android:text="@={addCameraViewModel.detectorWidth}"
            android:textSize="@dimen/textSizeInputExtraSmall" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDetectorPitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/detectorPitch"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/darkBlueAcceptBtn"
        app:boxStrokeColor="@color/darkBlueAcceptBtn"
        app:hintTextColor="@color/darkBlueAcceptBtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textInputDetectorHeight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@color/white"
            android:textSize="@dimen/textSizeInputSmall"
            android:text="@={addCameraViewModel.detectorPitch}"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFocalLength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/focalLength"
        android:textColorHint="@color/darkBlueAcceptBtn"
        app:boxStrokeColor="@color/darkBlueAcceptBtn"
        app:hintTextColor="@color/darkBlueAcceptBtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textInputDetectorPitch">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="number"
            android:textSize="@dimen/textSizeInputSmall"
            android:text="@={addCameraViewModel.focalLength}"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCameraHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cameraHeight"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/darkBlueAcceptBtn"
        app:boxStrokeColor="@color/darkBlueAcceptBtn"
        app:hintTextColor="@color/darkBlueAcceptBtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textInputFocalLength">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@color/white"
            android:textSize="@dimen/textSizeInputSmall"
            android:text="@={addCameraViewModel.cameraHeight}" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputOffset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:hint="@string/offset"
        android:textColorHint="@color/darkBlueAcceptBtn"
        app:boxStrokeColor="@color/darkBlueAcceptBtn"
        app:hintTextColor="@color/darkBlueAcceptBtn"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textInputCameraHeight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="numberSigned"
            android:text="@={addCameraViewModel.offset}"
            android:textSize="@dimen/textSizeInputSmall" />

    </com.google.android.material.textfield.TextInputLayout>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <Button
        android:id="@+id/btnAddCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/darkBlueAcceptBtn"
        android:minWidth="64dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/addCamerabtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnCancelAction"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/cancelBtnAddition"
        android:textColor="@color/darkBlueAcceptBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAddCamera"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAddCamera"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvAddCamera"
        app:srcCompat="@drawable/img_title_addcamera" />

    <TextView
        android:id="@+id/tvAddCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/addCameraTitle"
        android:textSize="@dimen/textSizeTitle"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>