<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myViewModel"
            type="com.denniszabolotny.coverzone.viewmodel.AddCameraViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constrainetLayoutSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.EditCameraFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_detector_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et_detector_height"
                android:inputType="number"
                android:text="@={myViewModel.detectorHeight}" />

            <EditText
                android:id="@+id/et_detector_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et_detector_width"
                android:inputType="number"
                android:text="@={myViewModel.detectorWidth}" />

            <EditText
                android:id="@+id/et_Offset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et_offset"
                android:inputType="numberSigned"
                android:text="@={myViewModel.offset}" />

            <EditText
                android:id="@+id/et_detector_pitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et_detector_pitch"
                android:inputType="number"
                android:text="@={myViewModel.detectorPitch}" />

            <EditText
                android:id="@+id/et_focalLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et_focal_length"
                android:inputType="number"
                android:text="@={myViewModel.focalLength}" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save_update_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:text="@={myViewModel.saveOrUpdateButtonText}"
            app:backgroundTint="#E91E63"
            app:layout_constraintBottom_toBottomOf="@+id/btn_delete_data"
            app:layout_constraintEnd_toStartOf="@+id/btn_delete_data"
            app:layout_constraintHorizontal_bias="0.925"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_delete_data"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_delete_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="88dp"
            android:onClick="@{()->myViewModel.clearAllOrDelete()}"
            android:text="@={myViewModel.clearAllOrDeletAllButtonText}"
            app:backgroundTint="#E91E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_delete_data">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cameras_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:scrollbars="vertical" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>